added shade plugin for mvn package and spotless plugin for code formatting and java jar run command

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,83 @@
     <groupId>com.krish</groupId>
     <artifactId>LogManagement</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
+
+
+    <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <plugins>
+            <plugin>
+                <!-- Plugin is used to run main class using mvn exec:exec command-->
+
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>App</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- Plugin is used to format the code/ beautify the code -->
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>1.16.0</version>
+                <configuration>
+                    <java>
+                        <googleJavaFormat>
+                            <version>1.5</version>
+                            <style>GOOGLE</style>
+                        </googleJavaFormat>
+                        <removeUnusedImports/>
+                        <importOrder>
+                            <order>java,javax,org,com,com.diffplug,</order>
+                        </importOrder>
+                    </java>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- Plugin is used to package the code into a jar in target folder-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>App</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
